--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <title>Pratham Kadave</title>
+    <meta name="google-site-verification" content="I1044qw9Gf8S0GRwuFUsyaXPmpU87MT7LNLiMvGLunI" />
 </head>
 <body>
 <div class="top-container">
